# bank

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: publish.yaml
src/: google.rs  keycloak.rs  lib.rs  mongo.rs  options.rs
ui/: .env  .env.prod  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/public/: index.html
ui/src/: App.css  App.js  App.tsx  api.ts  index.css  index.js  keycloak.ts  keycloak.tsx  main.tsx  utils.ts
ui/src/api/: backend.js
ui/src/app/: api.ts
ui/src/app/components/: Account.tsx  AccountList.tsx  Admin.tsx  Content.tsx  NewAccount.tsx  NewTransaction.tsx  TransactionList.tsx
ui/src/components/: .#AccountList.js  Account.js  Account.tsx  AccountDetails.tsx  AccountList.js  AccountList.tsx  Admin.js  Admin.tsx  App.js  Auth.js  Content.js  Content.tsx  LoadingSpinner.tsx  Modal.tsx  Navbar.tsx  NewAccount.js  NewAccount.tsx  NewTransaction.js  NewTransaction.tsx  TransactionList.js  TransactionList.tsx
ui/src/semantic-ui/site/collections/: form.variables  menu.variables  table.variables
ui/src/semantic-ui/site/globals/: site.variables
ui/src/semantic-ui/site/modules/: dropdown.variables
